Implemented search endpoint + tests
